2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* powerpc/l4/bits/syscall.h (l4_kernel_interface): Remove clobber
	list.

	* powerpc/l4/bits/syscall.h (l4_kernel_interface): Fix setting
	return variables.
	(l4_exchange_registers): Fix typo.
	(l4_space_control): Fix cut and paste bug and use .raw member to
	access fpages and thead ID objects.
	(l4_ipc): Remove superfluous comma.
	(l4_lipc): Likewise.
	* powerpc/l4/bits/math.h (__l4_msb): Add missing name parameter
	for input constraint.
	Submitted by Maurizio Boriani <debauxit@yahoo.it>.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* l4/types.h (_L4_BITFIELD5): Fix macro definition.

2003-09-24  Maurizio Boriani  <debauxit@yahoo.it>
 
	* l4/types.h (_L4_BITFIELD4): Fix macro definition.
	(_L4_BITFIELD6): Was defined twice.  The second instance is
	renamed to ...
	(_L4_BITFIELD7): ... this.

2003-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* headers.m4: Add arch-dependent files using a shell variable.
	* headers-ia32.m4, headers-powerpc.m4: Files removed.

	* Makefile.am (ARCH_SUBDIR) [ARCH_POWERPC]: Add powerpc.
	* headers-powerpc.m4: New file.
	* powerpc/Makefile.am: New file.
	* powerpc/l4/bits/ipc.h, powerpc/l4/bits/space.h,
	powerpc/l4/bits/types.h, powerpc/l4/bits/kip.h,
	powerpc/l4/bits/stubs-init.h, powerpc/l4/bits/vregs.h,
	powerpc/l4/bits/math.h, powerpc/l4/bits/stubs.h,
	powerpc/l4/bits/misc.h, powerpc/l4/bits/syscall.h: New files.
	
2003-09-19  Marcus Brinkmann  <marcus@gnu.org>

	* l4/init.h: Include <l4/syscall.h>

2003-09-18  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (nobase_include_HEADERS): Add l4/init.h.
	* headers.m4: Likewise.

	* l4/kip.h (L4_MIN_PAGE_SIZE): New macro.
	(l4_memory_desc_high): Return the address of the last byte, not
	the byte following it, according to 20030912 version of the L4 X.2
	specification, revision 4.

	* l4/types.h (__L4_PRI_PREFIX, L4_PRIdWORD, L4_PRIiWORD,
	L4_PRIoWORD, L4_PRIuWORD, L4_PRIxWORD, L4_PRIXWORD, L4_SCNdWORD,